data/collection/fixes/descriptions/kotlin/KT-17386
```
class Foo {
    fun bar() {}
}

fun test(f: Foo?) {
    if (f != null) f::bar // OK
    
    if (f != null) f::bar else null // error
}
```

```
1.kt:8:23: error: only safe (?.) or non-null asserted (!!.) calls are allowed on a nullable receiver of type Foo?
    if (f != null) f::bar else null // error
                      ^
```
